[package]
name = "garnish_repl"
version = "0.1.0"
authors = ["Chad Collins <chadrcollins91@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garnish_lang_compiler = "0.0.1-alpha"
garnish_lang_runtime = "0.0.1-alpha"
